src/App.css
/* ... */
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
  
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

div {
  // outline: 1px solid red;
  -webkit-tap-highlight-color: rgba(0,0,0,0);
}

html {
// -ms-touch-action: manipulation;
// touch-action: manipulation;
}




body{
  background-color: RGBA(98, 170, 191, 1.00);
  font-family: var(--primaryFont);
  color: var(--mainTextColor);
}

#root {
  overflow: hidden;
}

.main-container {
  // display: flex;
  justify-content: center;
  align-items: center;
  height: 70%;
  width: 100%;
  color: white;
  background-color: var(--highlightButtonColor);
}

.time-display-wrapper {
  width: 100%;
  padding-top: 50px;
  // height: 60vh;
  // padding-left: 200px;
  // margin-left: 200px;
}

.main-timer-section-wrapper {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 30vh;
  // margin-top: 100px;
}

.time-and-play-reset-button-container {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
}

.time-display {
  min-width: 200px;
  text-align: center;
  font-size: var(--timeDisplayFontSizeMobile);
  padding: 15px;
  border-radius: var(--borderRoundness);
  background-color: var(--insetAreaColor);
  
}

.add-border {
  border: 3px solid #3D4453;
}

.box-shadow {
  box-shadow: inset 0px 1px 1px rgba(0, 0, 0, 0.3), 0px 1px 0px white;
}

.box-shadow-normal {
  box-shadow: -1px 1px 1px rgba(0, 0, 0, 0.3), 0px 1px 0px white;
}

.play-pause-reset-buttons-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  // min-width: 50px;
  margin: 0 0 0 25px;
  background-color: var(--insetAreaColor);
  
  border-radius: var(--borderRoundness);
}

.play-pause-button-container{
  margin-bottom: 20px;
  margin-top: 10px;
}



.reset-button-container {
  margin-bottom: 10px;
  position: relative;
}

.icon-play,
.icon-pause,
.icon-cw,
.icon-cancel {
  font-size: 40px;
}

.icon-cog {
  font-size: 30px;
  position: relative;
  margin-right: 10px;
  display: inline-block;
}





.icon-cw {
  display: inline-block;
  transform: rotate(180deg);
}




.reset-button-overlay {
  position: absolute;
  top: 0;
  left: 0;
  // background-color: yellow;
  opacity: 1;
}

@keyframes fade-glow-anim {
  from {color: var(--highlightButtonColor);}
  to {color: white;} 

}

@keyframes fade-glow-bg-anim {
  from {background-color: var(--highlightButtonColor);}
  to {background-color: white;} 

}

@keyframes spin-anim {
  from {
    color: var(--highlightButtonColor);
    transform: rotate(0deg);
  }
  to {
    color: var(--mainTextColor);
    transform: rotate(270deg);
  } 

}

.glow-fade {
  animation: fade-glow-anim 1.0s forwards;
}

.glow-fade-bg {
  animation: fade-glow-bg-anim 1.0s forwards;
}

.glow-spin {
  animation: spin-anim 1.0s forwards;
}


.time-mode-select-container {
  display: flex;
  justify-content: space-around;
  align-items: center;
  height: 60px;
  width: 90%;
  max-width: 288px;
  border-radius: var(--borderRoundness);
  margin: 10px auto 0px auto;
  line-height: 25px;
  font-size: 23px;
  font-weight: 800;
  background-color: var(--insetAreaColor);
  padding: 10px 0 10px 0;
  letter-spacing: 1px;
}

.time-mode-button {
  // padding: 15px;
  // height: 10px;
  // border-right: 2px solid var(--mainTextColor);
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
}

.time-mode-button:last-of-type {
  border-right: none;
}

.glow {
  color: var(--highlightButtonColor);

  text-shadow: 0 0 1px var(--highlightButtonGlowColor);

  
}

.tomato-icon-container {
  height: 50px;
  width: 50px;
  display: flex;
  justify-content: center;
  align-items: center;
  // background-color: var(--highlightButtonColor);
  // border-radius: var(--borderRoundness);
}

.tomato-icon {
  height: 50px;
}

.header-bar {
  width: 100vw;
  // background-color: RGBA(98, 170, 191, 1.00);
  height: 80px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  // z-index: -1000;
}

.header-logo {
  // width: 100%;
  // float: left;
  height: 100%;
  // background-color: blue;
  display: inline-block;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 40px;
  font-weight: bolder;
  // margin-left: 25px;
  // width: 100px;
  text-shadow: -1px 1px 0px var(--logoShadowColor),
                -2px 2px 0px var(--logoShadowColor),
                -3px 3px 0px var(--logoShadowColor),
                -4px 4px 0px var(--logoShadowColor),
                -5px 5px 0px var(--logoShadowColor),
                -6px 6px 0px var(--logoShadowColor);
  color: var(--logoColor);
  letter-spacing: var(--logoLetterSpacing);

  margin-left: 20px;
  margin-top: 10px;
}

.settings-button-container {
  height: 100%;
  // background-color: green;
  display: inline-block;
  // padding-right: 40px;
  // color: var(--mainTextColor);
}
/* ... */

